style.css
 /* overall css styles */
    /* background repeating pattern */

    body {
        background:
        radial-gradient(circle at 100% 50%, transparent 20%, rgba(255,255,255,.3) 21%, rgba(255,255,255,.3) 34%, transparent 35%, transparent),
        radial-gradient(circle at 0% 50%, transparent 20%, rgba(255,255,255,.3) 21%, rgba(255,255,255,.3) 34%, transparent 35%, transparent) 0 -50px;
        background-color: slategray;
        background-size:75px 100px;
    }

    /* Custom nav bar properties */

    .navbar {
        position: fixed;
        top: 0px;
        width: 100%;
        padding-left: 2%;
        z-index: 99;
    }

    h1 {
        text-align: center;
        font-size: 180%;
        font-weight: bolder;
        padding: 5% 5% 0% 5%;
    }

    h2 {
        text-align: center;
        font-size: 130%;
        font-weight: normal;
        padding: 0% 5% 2% 5%;
    }

    h3 {
        text-align: center;
        font-weight: bold;
        font-size: 150%;
    }
/* about me page properties */
    /* about me profile container properties */

    .profile {
        height: 100%;
        width: 75%;
        margin: 10% 20% 20% 20%;
        background-color: #f2f2f2;
        border-radius: 5%;
    }

    /* contact info block properties */

    .contact-icons {
        margin-left: auto;
        margin-right: auto;
        padding: 5%;
        width: 50%;
        }

    .contact-icons p {
        display: none;
        background-color: #1a1919;
        color: #ffffff;
        text-align: center;
        padding: 2%;
        margin-top: 5%;
    }

    .contact-icons:hover p {
        display: block;
    }

/* portfolio page properties */
    /* portfolio header properties */

    .portfolio-header {
        height: 100%;
        width: 35%;
        margin: 10% auto 5% auto;
        background-color: #f2f2f2;
        border-radius: 5%;
    }

    .portfolio-header h1 {
        padding: 5%;
        font-size: 210%;
    }

    /* portfolio content section blocks */

    .portfolio-section {
        height: 100%;
        width: 30%;
        margin: auto;
        padding: 2%;
        background-color: #f2f2f2;
        border-radius: 5%;
    }

    /* contact page properties */

    .contact-container {
        height: 100%;
        width: 70%;
        margin: 10% auto auto auto;
        padding: 2%;
        background-color: #f2f2f2;
        border-radius: 5%;
    }

    .contact-container h1 {
        margin-bottom: 5%;
    }

